Small changes in fr version, and start of the nelgish one

--- a/index.html
+++ b/index.html
@@ -83,23 +83,24 @@
             voire même de chiffrer directement des partitions du système
             d’exploitation sur lequel il est installé.
             <br />
-            VeraCrypt succède au logiciel TrueCrypt et est développé depuis fin
-            2014 par IDRIX, une société dirigée par Mounir Idrassi. Des
-            contributeurs extérieurs participent aussi au développement du
-            logiciel.
+            VeraCrypt succède au logiciel TrueCrypt et est développé depuis
+            mi-2013 par <a href="https://www.idrix.fr/">IDRIX</a>, une société
+            dirigée par Mounir Idrassi. Des contributeurs extérieurs participent
+            aussi au développement du logiciel.
           </p>
           <p>
-            Téléchargé plusieurs millions de fois depuis juin 2014, VeraCrypt
+            Téléchargé plusieurs millions de fois depuis juin 2013, VeraCrypt
             est une <strong>référence</strong> dans le domaine de la
             <strong>protection des données</strong>. Il a notamment été intégré
             par <a href="https://rsf.org/fr">Reporters Sans Frontières</a> dans
             son Guide de Protection des Sources de 2021. Préconisé par l'<a
               href="https://www.ssi.gouv.fr/"
               >ANSSI</a
-            >, VeraCrypt a été intégré en 2018 au
+            >, VeraCrypt a aussi été intégré en 2018 au
             <a href="https://sill.etalab.gouv.fr/software"
               >Socle Interministériel des Logiciels Libres</a
-            >.
+            >, un catalogue géré par la
+            <a href="https://www.numerique.gouv.fr/dinum/">DINUM</a>.
           </p>
           <p>
             La <strong>sécurité</strong> du code source de VeraCrypt a été
@@ -183,7 +184,7 @@
             de VeraCrypt afin d'ajouter cette fonctionnalité.
           </p>
           <hr />
-          <h4>Extraction des données EMV</h4>
+          <h4>Étude des cartes EMV</h4>
           <p>
             Selon la norme ISO/IEC 7816 sur laquelle s’appuie le standard EMV
             pour la communication avec contact, le dialogue avec la carte à puce
@@ -699,9 +700,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <!-- Footer -->
       <footer id="footer">
         <a href="./index_en.html" target="_top" id="version">English version</a>
-        <!-- <p class="copyright">
-          &copy; Send bitcoin or get hacked >_</a>
-        </p> -->
       </footer>
     </div>
 
