Finish of english version

--- a/index.html
+++ b/index.html
@@ -296,7 +296,10 @@
           <h2 class="major">Un coup d'oeil ?</h2>
           <p>
             L'entièreté des productions de ce projet est répartie dans les
-            dépôts dédiés de l'<b>organisation Github</b>
+            dépôts dédiés de l'<a
+              href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO"
+              ><b>organisation Github</b></a
+            >
             <a
               href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO"
               class="icon brands fa-github"
@@ -332,7 +335,7 @@
             <li>
               <a
                 href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO/Reports"
-                ><strong>Rapports</strong></a
+                ><strong>Reports</strong></a
               >
               stocke les versions PDF des rapports écrits tout au long des
               différentes phases du projet (en français uniquement).
