--- a/index_en.html
+++ b/index_en.html
@@ -232,14 +232,14 @@
         </article>
 
         <!-- Équipe -->
-        <article id="equipe">
-          <h2 class="major">Qui sommes nous ?</h2>
+        <article id="team">
+          <h2 class="major">Who are we ?</h2>
           <span class="image main insa"
             ><img src="images/Logo_INSARennes-developpe-blanc-rvb.png" alt=""
           /></span>
           <p>
-            Notre équipe est constituée de 7 étudiants en 4ème année au
-            département informatique de l'INSA Rennes :
+            Our team is composed of 7 students in 4th year in the computer
+            science department of INSA Rennes:
           </p>
           <ul>
             <li>
@@ -277,22 +277,25 @@
             </li>
           </ul>
           <p>
-            Ce projet académique, réalisé sur l'année 2022-2023, est encadré par
-            Gildas AVOINE et Jules DUPAS.
+            This academic project, carried out over the year 2022-2023, is
+            supervised by Gildas AVOINE and Jules DUPAS.
           </p>
         </article>
 
         <!-- Code -->
         <article id="code">
-          <h2 class="major">Un coup d'oeil ?</h2>
+          <h2 class="major">Take a glance ?</h2>
           <p>
-            L'entièreté des productions de ce projet est répartie dans les
-            dépôts dédiés de l'<b>organisation Github</b>
+            The entire production of this project is distributed in the
+            dedicated repositories of the team's
+            <a href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO"
+              ><strong>Github organization</strong></a
+            >
             <a
               href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO"
               class="icon brands fa-github"
-            ></a>
-            de l'équipe.
+            ></a
+            >.
           </p>
           <ul class="alt">
             <li>
@@ -300,33 +303,31 @@
                 href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO/VeraCrypt_EMV"
                 ><strong>VeraCrypt_EMV</strong></a
               >
-              est un fork du code source de VeraCrypt, modifié sur la branche
-              <i>dev</i> pour y ajouter la fonctionnalité EMV.
+              is a fork of the VeraCrypt source code, modified on the
+              <i>dev</i> branch to add the EMV functionality.
             </li>
             <li>
               <a
                 href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO/EMV_Extractor"
                 ><strong>EMV_Extractor</strong></a
               >
-              contient un POC en python et sa traduction en C++ permettant
-              d'extraire les certificats et données de cartes à puce de type
-              EMV.
+              contains a python POC and its C++ translation to extract
+              certificates and data from EMV smart cards.
             </li>
             <li>
               <a
                 href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO/Web_page"
                 ><strong>Web_page</strong></a
               >
-              correspond au code source de la page que vous êtes actuellement en
-              train de regarder.
+              is the source code of the page you are currently viewing.
             </li>
             <li>
               <a
                 href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO/Reports"
-                ><strong>Rapports</strong></a
+                ><strong>Reports</strong></a
               >
-              stocke les versions PDF des rapports écrits tout au long des
-              différentes phases du projet (en français uniquement).
+              stores PDF versions of reports written throughout the different
+              phases of the project (in French only).
             </li>
           </ul>
         </article>
