English links and small fixes

--- a/index_en.html
+++ b/index_en.html
@@ -66,7 +66,7 @@
 
       <!-- Main -->
       <div id="main">
-        <!-- Contexte -->
+        <!-- Context -->
         <article id="context">
           <h2 class="major">What is VeraCrypt ?</h2>
           <p>
@@ -91,9 +91,9 @@
             Downloaded several million times since June 2013, VeraCrypt is a
             <strong>reference</strong> in the field of
             <strong>data protection</strong>. It has been included by
-            <a href="https://rsf.org/fr">Reporters Without Borders</a> in its
+            <a href="https://rsf.org/en">Reporters Without Borders</a> in its
             2021 Source Protection Guide. Recommended by the
-            <a href="https://www.ssi.gouv.fr/">ANSSI</a>, VeraCrypt was also
+            <a href="https://www.ssi.gouv.fr/en/">ANSSI</a>, VeraCrypt was also
             included in the
             <a href="https://sill.etalab.gouv.fr/software"
               >Socle Interministériel des Logiciels Libres</a
@@ -104,9 +104,9 @@
           <p>
             The <strong>security</strong> of the VeraCrypt source code has been
             <strong>audited</strong> twice : a first time in 2016 by
-            <a href="https://www.quarkslab.com/fr/accueil/">Quarkslab</a>, a
-            French company specialized in software protection and analysis, and
-            again in 2020 by the
+            <a href="https://www.quarkslab.com/">Quarkslab</a>, a French company
+            specialized in software protection and analysis, and again in 2020
+            by the
             <i>Fraunhofer Institute for Secure Information Technology</i> on
             behalf of the
             <a href="https://www.bsi.bund.de/EN/Home/home_node.html"
@@ -116,14 +116,14 @@
           </p>
         </article>
 
-        <!-- Objectif -->
+        <!-- Objective -->
         <article id="objective">
           <h2 class="major">What is the goal ?</h2>
           <p>
             Currently, the security of VeraCrypt's encryption is based on the
             use of a password known only to the owner of the volume. The latter
             also has the possibility to use one or more additional files to
-            reinforce the entropy of his password: the
+            reinforce the entropy of his password : the
             <strong>keyfiles</strong>. These files, integrated in the
             cryptographic process of VeraCrypt, can be considered as a double
             authentication factor.
@@ -160,10 +160,10 @@
           </p>
         </article>
 
-        <!-- Implémentation -->
+        <!-- Specification -->
         <article id="specifications">
           <h2 class="major">How to reach it ?</h2>
-          <h4>Project pholosophy</h4>
+          <h4>Project philosophy</h4>
           <p>
             Throughout this project, changes were made to the source code of an
             existing application. We had to make sure that no security breaches
@@ -174,7 +174,7 @@
             wouldn't be not too disturbed by these changes.
           </p>
           <p>
-            Technically, this project is divided into two steps: understanding
+            Technically, this project is divided into two steps : understanding
             how EMV cards work and modifying the VeraCrypt source code to add
             this functionality.
           </p>
@@ -212,7 +212,7 @@
           <p>
             The implementation for EMV cards is inspired by the one developed
             for the use of PKCS#11 cards in VeraCrypt. The window for selecting
-            keyfiles on smart cards has been reused: a template dedicated to EMV
+            keyfiles on smart cards has been reused : a template dedicated to EMV
             cards has been added. The last four digits of the connected EMV card
             numbers are displayed for selection.
           </p>
@@ -231,7 +231,7 @@
           </p>
         </article>
 
-        <!-- Équipe -->
+        <!-- Team -->
         <article id="team">
           <h2 class="major">Who are we ?</h2>
           <span class="image main insa"
@@ -239,7 +239,7 @@
           /></span>
           <p>
             Our team is composed of 7 students in 4th year in the computer
-            science department of INSA Rennes:
+            science department of INSA Rennes :
           </p>
           <ul>
             <li>
