--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
             par <a href="https://www.quarkslab.com/fr/accueil/">Quarkslab</a>,
             une entreprise française spécialisée dans la protection et l'analyse
             de logiciels, puis une deuxième fois en 2020 par le
-            <i>Fraunhofer Institute for Secure Information Technology</i> au nom
-            du
+            <a href="https://www.sit.fraunhofer.de/en/"
+              >Fraunhofer Institute for Secure Information Technology</a
+            >
+            au nom du
             <a href="https://www.bsi.bund.de/EN/Home/home_node.html"
               >Federal Office for Information Security (BSI)</a
             >
@@ -166,7 +168,7 @@
 
         <!-- Implémentation -->
         <article id="specifications">
-          <h2 class="major">Comment le réaliser ?</h2>
+          <h2 class="major">Comment l'atteindre ?</h2>
           <h4>Philosophie du projet</h4>
           <p>
             Tout au long de ce projet, des modifications ont été apportées au
@@ -174,7 +176,7 @@
             qu'aucune faille de sécurité n'était introduite, que le code produit
             s'intégrait naturellement dans le code existant, que les
             modifications étaient minimes afin de faciliter la relecture par
-            d'autre développeurs et enfin que l'interface restait sensiblement
+            d'autres développeurs et enfin que l'interface restait sensiblement
             la même pour que l'utilisateur ne soit pas trop perturbé par ces
             changements.
           </p>
