--- a/index_en.html
+++ b/index_en.html
@@ -107,8 +107,10 @@
             <a href="https://www.quarkslab.com/">Quarkslab</a>, a French company
             specialized in software protection and analysis, and again in 2020
             by the
-            <i>Fraunhofer Institute for Secure Information Technology</i> on
-            behalf of the
+            <a href="https://www.sit.fraunhofer.de/en/"
+              >Fraunhofer Institute for Secure Information Technology</a
+            >
+            on behalf of the
             <a href="https://www.bsi.bund.de/EN/Home/home_node.html"
               >Federal Office for Information Security (BSI)</a
             >
@@ -212,9 +214,9 @@
           <p>
             The implementation for EMV cards is inspired by the one developed
             for the use of PKCS#11 cards in VeraCrypt. The window for selecting
-            keyfiles on smart cards has been reused : a template dedicated to EMV
-            cards has been added. The last four digits of the connected EMV card
-            numbers are displayed for selection.
+            keyfiles on smart cards has been reused : a template dedicated to
+            EMV cards has been added. The last four digits of the connected EMV
+            card numbers are displayed for selection.
           </p>
           <span class="image main pcsc"
             ><img src="images/new_interface_en.png" alt=""
